Fix line wrap on edit with double-digit hours

--- a/tracker/css/tracker.css
+++ b/tracker/css/tracker.css
@@ -242,7 +242,7 @@ a:hover {
 .timerText textarea {
     height: 1.15em !important;
     font-size: 1em;
-    width: 71px;
+    width: 74px;
     margin-top: 5px !important;
     text-align: right;
 }
